# Air-Ground-SAR

Air-FAR/: frames.gv
Air-FAR/src/airfar_planner/: CMakeLists.txt
Air-FAR/src/airfar_planner/include/airfar_planner/: airfar_planner.h
Air-FAR/src/airfar_planner/launch/: airfar.launch
Air-FAR/src/airfar_planner/rviz/: airfar_planner.rviz
Air-FAR/src/airfar_planner/src/: airfar_planner.cpp  control.cpp  goal_planner.cpp  graph_planner.cpp  planner_visualizer.cpp  road_mapping.cpp
Air-FAR/src/graph_decoder/launch/: decoder.launch
PX4-Autopilot/launch/: mavros_posix_sitl.launch
PX4-Autopilot/rviz/: UAV.rviz
aerial_autonomy_development_environment/: .gitignore  README.md
aerial_autonomy_development_environment/src/launch_unity/: CMakeLists.txt  package.xml
aerial_autonomy_development_environment/src/launch_unity/launch/: launch_unity.launch
aerial_autonomy_development_environment/src/local_planner/launch/: local_planner_indoor.launch  local_planner_outdoor.launch
aerial_autonomy_development_environment/src/local_planner/src/: localPlanner.cpp
aerial_autonomy_development_environment/src/terrain_analysis/launch/: terrain_analysis.launch
aerial_autonomy_development_environment/src/terrain_analysis/src/: terrainAnalysis.cpp
aerial_autonomy_development_environment/src/terrain_analysis_ext/launch/: terrain_analysis_ext.launch
aerial_autonomy_development_environment/src/terrain_analysis_ext/src/: terrainAnalysisExt.cpp
aerial_autonomy_development_environment/src/vehicle_simulator/: CMakeLists.txt
aerial_autonomy_development_environment/src/vehicle_simulator/launch/: system_gazebo.launch  system_unity.launch  vehicle_simulator_gazebo.launch  vehicle_simulator_unity.launch
aerial_autonomy_development_environment/src/vehicle_simulator/rviz/: vehicle_simulator_gazebo.rviz  vehicle_simulator_unity.rviz
aerial_autonomy_development_environment/src/vehicle_simulator/src/: vehicleSimulator.cpp
aerial_autonomy_development_environment/src/vehicle_simulator/urdf/: rgbd_camera.urdf.xacro  robot.urdf.xacro
aerial_autonomy_development_environment/src/visualization_tools/launch/: visualization_tools_gazebo.launch  visualization_tools_unity.launch
aerial_autonomy_development_environment/src/visualization_tools/src/: visualizationTools.cpp
aerial_autonomy_development_environment/src/waypoint_rviz_plugin/src/: goal_tool.cpp  goal_tool.h  pose_tool.cpp
autonomous_exploration_development_environment/src/loam_interface/launch/: loam_interface.launch
autonomous_exploration_development_environment/src/local_planner/launch/: local_planner.launch
autonomous_exploration_development_environment/src/local_planner/src/: localPlanner.cpp
autonomous_exploration_development_environment/src/sensor_scan_generation/launch/: sensor_scan_generation.launch
autonomous_exploration_development_environment/src/sensor_scan_generation/src/: sensorScanGeneration.cpp
autonomous_exploration_development_environment/src/terrain_analysis/launch/: terrain_analysis.launch
autonomous_exploration_development_environment/src/terrain_analysis/src/: terrainAnalysis.cpp
far_planner/src/far_planner/: CMakeLists.txt
road_ws/devel/: .catkin  .rosinstall  local_setup.sh
script/: travel_distance.py
script/yolo_detect/: road_detect.py  target.py  yolo_detect.py
(+36 files in other folders)
